--- a/springCloudFeign/src/main/resources/application.yml
+++ b/springCloudFeign/src/main/resources/application.yml
@@ -4,13 +4,13 @@ spring:
   application:
     name: service-feign
 
-# eurekaÅäÖÃ
+# eurekaé…ç½®
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8080/eureka/
 
-# Æô¶¯feignÖĞ¶ÏÂ·Æ÷
+# å¯åŠ¨feignä¸­æ–­è·¯å™¨
 feign:
   hystrix:
     enabled: true
