--- a/springCloudConfigClient/src/main/resources/bootstrap.yml
+++ b/springCloudConfigClient/src/main/resources/bootstrap.yml
@@ -1,11 +1,14 @@
-server:
-  port: 8085
-
 spring:
-  application:
-    name: config-client
   cloud:
     config:
-      label: main #配置仓库的分支
+      label: master #配置仓库的分支
       profile: dev  #开发环境配置文件
-      uri: http://localhost:8084/ #配置git仓库地址
+      #uri: http://localhost:8084/ #配置git仓库地址label: main #配置仓库的分支
+      discovery:
+        enabled: true #是从配置中心读取文件。
+        serviceId: config-server  #配置中心的servieId，即服务名
+# eureka配置
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8080/eureka/
